Fixing overflow problem on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -378,7 +378,7 @@ nav li:hover {
     width: 120px;
     height: 120px;
     border-radius: 100%;
-    overflow: hidden;
+    overflow: hidden !important;
     margin: auto;
     margin-top: 50px;
 }
